# gigaboard

./: .dockerignore  .env.example  .gitignore  .gitignore.storage  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_QUICK.md  DOCKER_DESKTOP.md  LICENSE  PUBLICATION_CHECKLIST.md  QUICKSTART.md  README.md  SECURITY.md  check_api.py  check_db.py  check_lineage.py  demo_scenario.md  docker-compose.dev.yml  docker-compose.publish-internal-ports.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run-backend.ps1  run-backend.sh  run-dev.ps1  run-dev.sh  run-frontend.ps1  run-frontend.sh
apps/backend/: .dockerignore  .env.example  Dockerfile  SETUP.md  check_engine.py  create_test_user.py  docker-entrypoint.sh  fix_enum.py  pyproject.toml  run_dev.py
apps/backend/app/: main.py
apps/backend/app/core/: __init__.py  base.py  config.py  database.py  redis.py  socketio.py
apps/backend/app/middleware/: __init__.py  auth.py
apps/backend/app/models/: __init__.py  agent_session.py  base_node.py  board.py  chat_message.py  comment_node.py  content_node.py  dashboard.py  dashboard_item.py  dashboard_share.py  dimension.py  dimension_column_mapping.py  edge.py  filter_preset.py  project.py  project_collaborator.py  project_table.py  project_widget.py  source_node.py  uploaded_file.py  user.py  (+2 more)
apps/backend/migrations/: alembic.ini  env.py  fix_orphaned_nodes.py  fix_orphaned_source_nodes.sql
apps/backend/scripts/: check_backend_routes.py  check_datanode_structure.py  check_nodes_inheritance.py  check_tables.py  cleanup_all.py  create_db.py  debug_datanode.py  drop_nodes_table.py  example_search_agent.py  fix_old_datanodes.py  simple_search_test.py  test_backend_add_filter_phillips.py  test_dashboard_chat_memory.py  test_suggestions_controllers.py
(+619 files in other folders)
